import "AddResponse.proto";
import "BulkAddResponse.proto";
import "BulkGetResponse.proto";
import "BulkInsertResponse.proto";
import "BulkRemoveResponse.proto";
import "ClearResponse.proto";
import "ContainResponse.proto";
import "CountResponse.proto";
import "DisposeResponse.proto";
import "GetCacheItemResponse.proto";
import "GetResponse.proto";
import "GetEnumeratorResponse.proto";
import "GetGroupDataResponse.proto";
import "GetGroupKeysResponse.proto";
import "GetHashmapResponse.proto";
import "GetOptimalServerResponse.proto";
import "GetTagResponse.proto";
import "GetTypeMapResponse.proto";
import "InitializeCacheResponse.proto";
import "InsertReponse.proto";
import "RaiseCustomEventResponse.proto";
import "RegisterKeyNotifResponse.proto";
import "RegisterBulkKeyNotifResponse.proto";
import "RegisterNotifResponse.proto";
import "RemoveGroupResponse.proto";
import "LockResponse.proto";
import "RemoveResponse.proto";
import "SearchResponse.proto";
import "SearchEntriesResponse.proto";
import "UnlockResponse.proto";
import "VerifyLockResponse.proto";
import "IsLockedResponse.proto";
import "UnregisterBulkKeyNotifResponse.proto";
import "UnregisterKeyNotifResponse.proto";
import "GetLoggingInfoResponse.proto";
import "Exception.proto";
import "CacheClearedEventResponse.proto";
import "HashmapChangedEventResponse.proto";
import "CacheStoppedEventResponse.proto";
import "ConfigModifiedEventResponse.proto";
import "CustomEventResponse.proto";
import "ItemAddedEventResponse.proto";
import "ItemRemovedEventResponse.proto";
import "ItemUpdatedEventResponse.proto";
import "LoggingInfoModifiedEventResponse.proto";
import "NodeJoinedEventResponse.proto";
import "NodeLeftEventResponse.proto";
import "AsyncOperationCompletedCallbackResponse.proto";
import "ItemRemoveCallbackResponse.proto";
import "ItemUpdatedCallbackResponse.proto";
import "DSUpdatedCallbackResponse.proto";
import "RemoveByTagResponse.proto";
import "GetKeysByTagResponse.proto";
import "BulkDeleteResponse.proto";
import "DeleteResponse.proto"; 
import "GetNextChunkResponse.proto";
import "GetGroupNextChunkResponse.proto";
import "AddAttributeResponse.proto";
import  "LCDataResponse.proto";
import "GetRunningServersResponse.proto";
import "SyncEventsResponse.proto";
import "BlockActivityEventResponse.proto";
import "UnBlockActivityEventResponse.proto";
import "RemoveQueryResponse.proto";
import "DeleteQueryResponse.proto";
import "GetProductVersionResponse.proto";
import "BulkEventResponse.proto";
import "GetCacheBindingResponse.proto";
import "InvokeEntryProcessorResponse.proto";
import "MapReduceTaskResponse.proto";
import "TaskCallbackResponse.proto";
import "TaskCancelResponse.proto";
import "GetRunningTasksResponse.proto";
import "TaskProgressResponse.proto";
import "GetNextRecordResponse.proto";
import "GetTaskEnumeratorResponse.proto";
import "GetCacheConfigurationResponse.proto";

option java_outer_classname="ResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message Response {

enum Type 
	{
		ADD = 1;
		ADD_BULK = 2;
		GET_BULK = 3;
		INSERT_BULK = 4;
		REMOVE_BULK = 5;
		CLEAR = 6;
		CONTAINS = 7;
		COUNT = 8;
		DISPOSE = 9;
		GET_CACHE_ITEM = 10;
		GET = 11;
		GET_ENUMERATOR = 12;
		GET_GROUP_DATA = 13;
		GET_HASHMAP = 14;
		GET_OPTIMAL_SERVER = 15;
		GET_TYPEINFO_MAP = 16;
		INIT = 17;
		INSERT = 18;
		RAISE_CUSTOM_EVENT = 19;
		REGISTER_KEY_NOTIF = 20;
		REGISTER_NOTIF = 21;
		REMOVE = 22;
		REMOVE_GROUP = 23;
		SEARCH = 24;
		GET_TAG = 25;
		LOCK = 26;
		UNLOCK = 27;
		ISLOCKED = 28;
		LOCK_VERIFY = 29;
		UNREGISTER_KEY_NOTIF = 30;	
		UNREGISTER_BULK_KEY_NOTIF = 31;	
		REGISTER_BULK_KEY_NOTIF = 32;
		GET_LOGGING_INFO = 33;
		GET_GROUP_KEYS = 34;	
		SEARCH_ENTRIES = 35;	
		EXCEPTION = 36;
		ASYNC_OP_COMPLETED_CALLBACK = 37;
		ITEM_REMOVED_CALLBACK = 38;
		ITEM_UPDATED_CALLBACK = 39;
		CACHE_CLEARED_EVENT = 40;
		CACHE_STOPPED_EVENT = 41;
		CONFIG_MODIFIED_EVENT = 42;
		CUSTOM_EVENT = 43;
		HASHMAP_CHANGED_EVENT = 44;
		ITEM_ADDED_EVENT = 45;
		ITEM_REMOVED_EVENT = 46;
		ITEM_UPDATED_EVENT = 47;
		LOGGING_INFO_MODIFIED_EVENT = 48;
		NODE_JOINED_EVENT = 49;
		NODE_LEFT_EVENT = 50;
		DS_UPDATE_CALLBACK = 51;
		REMOVE_TAG = 52;
		GET_KEYS_TAG = 53;
		DELETE_BULK = 54;
		DELETE = 55;
		GET_NEXT_CHUNK = 56;
		GET_GROUP_NEXT_CHUNK = 57;
		ADD_ATTRIBUTE = 58;
		LC_DATA = 59;
		GET_RUNNING_SERVERS = 60;
		SYNC_EVENTS = 61;
		BLOCK_ACTIVITY = 62;
		UNBLOCK_ACTIVITY = 63;
		REMOVE_QUERY = 64;
		DELETE_QUERY = 65;
		GET_PRODUCT_VERSION = 66;
		BULK_EVENT = 67;
		CACHE_BINDING = 68;
		INVOKE_ENTRYPROCESSOR = 69;
		MAP_REDUCE_TASK = 70;
		MAP_REDUCE_TASK_CALLBACK = 71;
		MAP_REDUCE_TASK_CANCEL = 72;
		GET_RUNNING_TASKS = 73;
		TASK_PROGRESS = 74;
		GET_NEXT_RECORD = 75;
		GET_TASK_ENUMERATOR = 76;
		GET_CACHE_CONFIG = 77;

	}
	
	optional int64 requestId = 1;
	optional Type responseType = 2;
	optional Exception exception = 3;	
	optional BulkAddResponse bulkAdd = 4;
	optional BulkGetResponse bulkGet = 5;
	optional BulkInsertResponse bulkInsert = 6;
	optional BulkRemoveResponse bulkRemove = 7;
	optional ContainResponse contain = 8;
	optional CountResponse count = 9;
	optional GetCacheItemResponse getItem = 10;
	optional GetResponse get = 11;
	optional GetEnumeratorResponse getEnum = 12;
	optional GetGroupDataResponse getGroupData = 13;
	optional GetGroupKeysResponse getGroupKeys = 14;
	optional GetHashmapResponse getHashmap = 15;
	optional GetOptimalServerResponse getOptimalServer = 16;
	optional GetTagResponse getTag = 17;
	optional GetTypeMapResponse getTypemap = 18;
	optional InitializeCacheResponse initCache = 19;
	optional InsertResponse insert = 20;
	optional LockResponse lockResponse = 21;
	optional VerifyLockResponse lockVerify = 22;
	optional RemoveResponse remove = 23;
	optional SearchResponse search = 24;
	optional SearchEntriesResponse searchEntries = 25;
	optional AddResponse addResponse = 26;
	optional ClearResponse clearResponse = 27;
	optional DisposeResponse disposeResponse = 28;
	optional RaiseCustomEventResponse raiseCustomEventResponse = 29;
	optional RegisterKeyNotifResponse registerKeyNotifResponse = 30;
	optional RegisterNotifResponse registerNotifResponse = 31;
	optional RemoveGroupResponse removeGroupResponse = 32;
	optional IsLockedResponse isLockedResponse = 33;
	optional UnregisterBulkKeyNotifResponse unregisterBulkKeyNotifResponse = 34;
	optional UnregisterKeyNotifResponse unregisterKeyNotifResponse = 35;
	optional GetLoggingInfoResponse getLoggingInfoResponse = 36;
	optional AsyncOperationCompletedCallbackResponse asyncOpCompletedCallback = 37;
	optional ItemRemoveCallbackResponse itemRemovedCallback = 38;
	optional ItemUpdatedCallbackResponse itemUpdatedCallback = 39;
	optional CacheClearedEventResponse cacheCleared = 40;
	optional CacheStoppedEventResponse cacheStopped = 41;
	optional ConfigModifiedEventResponse configModified = 42;
	optional CustomEventResponse customEvent = 43;
	optional HashmapChangedEventResponse hashmapChanged = 44;
	optional ItemAddedEventResponse itemAdded = 45;
	optional ItemRemovedEventResponse itemRemoved = 46;
	optional ItemUpdatedEventResponse itemUpdated = 47;
	optional LoggingInfoModifiedEventResponse loggingInfoModified = 48;
	optional NodeJoinedEventResponse nodeJoined = 49;
	optional NodeLeftEventResponse nodeLeft = 50;
	optional UnlockResponse unlockResponse = 51;
	optional RegisterBulkKeyNotifResponse registerBulkKeyNotifResponse = 52;
	optional DSUpdatedCallbackResponse dsUpdateCallbackRespose = 53;
	optional RemoveByTagResponse removeTagResponse = 54;
	optional GetKeysByTagResponse getKeysByTagResponse = 55;
	optional BulkDeleteResponse bulkDeleteResponse = 56;
	optional DeleteResponse deleteResponse = 57;
	optional string intendedRecipient = 58;
	optional int32 sequenceId = 59 [default=1];
	optional int32 numberOfChuncks = 60 [default=1];
	optional GetNextChunkResponse getNextChunkResponse = 61;
	optional GetGroupNextChunkResponse getGroupNextChunkResponse = 62;
	optional AddAttributeResponse addAttributeResponse = 63;
	optional LCDataResponse LCResponse = 64;
	optional GetRunningServersResponse getRunningServer = 65;
	optional SyncEventsResponse syncEventsResponse = 66;
	optional BlockActivityEventResponse blockActivityEvent = 67;
	optional UnBlockActivityEventResponse unblockActivityEvent = 68;
	optional DeleteQueryResponse deleteQueryResponse = 69;
	optional RemoveQueryResponse removeQueryResponse = 70;
	optional GetProductVersionResponse getProductVersionResponse = 71;
	optional BulkEventResponse bulkEventResponse = 72;
	optional GetCacheBindingResponse getCacheBindingResponse = 73;
	optional InvokeEntryProcessorResponse invokeEntryProcessorResponse =74;
	optional MapReduceTaskResponse mapReduceTaskResponse = 75;
	optional TaskCallbackResponse taskCallbackResponse = 76;
	optional TaskCancelResponse taskCancelResponse = 77;
	optional GetRunningTasksResponse getRunningTasksResponse = 78;
	optional TaskProgressResponse taskProgressResponse = 79;
	optional GetNextRecordResponse getNextRecordResponse = 80;
	optional GetTaskEnumeratorResponse getTaskEnumeratorResponse = 81;
	optional GetCacheConfigurationResponse getCacheConfigurationResponse = 82;

}
